--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -14,7 +14,6 @@
             margin: 0;
             padding: 0;
             background: #E0FFFF;
-            position: relative;
         }
 
         /* Custom Navbar Color and Padding */
@@ -38,6 +37,7 @@
             transition: all 0.3s ease;
             width: 100%;
             height: 100%;
+            position: relative;
         }
 
         /* Image styling for gallery */
@@ -46,35 +46,36 @@
             height: 100%;
             object-fit: cover; /* Ensures images maintain their aspect ratio */
             transition: all 0.3s ease;
+            user-select: none; /* Prevent text selection */
+            pointer-events: none; /* Prevents image dragging */
         }
 
-        /* Hover effect on gallery item */
-        .gallery:hover {
-            border: 1px solid #333;
-        }
-
-        /* Watermark styling */
+        /* Watermark */
         .watermark {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            color: white;
             font-size: 2rem;
-            color: rgba(255, 255, 255, 0.7);
-            text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            opacity: 0.5;
             pointer-events: none;
         }
 
-        /* Overlay div to prevent screenshots */
-        .prevent-screenshot {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(255, 255, 255, 0.5);
-            z-index: 9999;
-            pointer-events: none; /* Allows interaction with other elements underneath */
+        /* Row styling */
+        .row {
+            margin-right: 0;
+            margin-left: 0;
+        }
+
+        .col-12, .col-md-4, .col-lg-3 {
+            padding-right: 0;
+            padding-left: 0;
+        }
+
+        /* Hover effect on gallery item */
+        .gallery:hover {
+            border: 1px solid #333;
         }
 
         /* Modal styling */
@@ -126,6 +127,7 @@
             right: 5%;
         }
 
+        /* Hover effect for the buttons */
         .prev:hover, .next:hover {
             background-color: rgba(0, 0, 0, 0.7);
         }
@@ -133,41 +135,36 @@
         /* Responsive adjustments */
         @media (max-width: 1200px) {
             .col-lg-3 {
-                width: 25%;
+                width: 25%; /* 4 items in a row on larger screens like laptops */
             }
         }
 
         @media (max-width: 768px) {
             .col-md-4 {
-                width: 33.33%;
+                width: 33.33%; /* 3 items in a row on tablets */
             }
         }
 
         @media (max-width: 576px) {
             .col-12 {
-                width: 100%;
+                width: 100%; /* Single column layout on mobile */
             }
+
             .gallery img {
-                height: auto;
+                height: auto; /* Maintain aspect ratio for mobile */
             }
         }
 
         /* Ensure modal images are responsive */
         @media (max-width: 576px) {
             .modal img {
-                width: 100%;
-                height: auto;
+                width: 100%; /* Full width for modal images on smaller screens */
+                height: auto; /* Maintain aspect ratio */
             }
         }
     </style>
 </head>
 <body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
-
-    <!-- Overlay div to prevent screenshots -->
-    <div class="prevent-screenshot"></div>
-
-    <!-- Watermark -->
-    <div class="watermark">Govt Girls College</div>
 
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
@@ -200,15 +197,17 @@
         <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
 
         <div class="row" id="galleryRow">
-            <!-- Gallery Item 1 -->
+            <!-- Gallery Items -->
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(0)">
-                        <img src="./gallery/aa.jpg" alt="aa" class="img-fluid" loading="lazy">
+                        <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
+                        <div class="watermark">© Your College</div>
                     </a>
                 </div>
             </div>
-            <!-- Other gallery items here... -->
+            <!-- Add other gallery items in similar fashion -->
+            <!-- ... -->
         </div>
     </div>
 
@@ -216,8 +215,8 @@
     <div id="imageModal" class="modal">
         <span class="close" onclick="closeModal()">&times;</span>
         <img id="modalImage" src="" alt="Large Image">
-        <span class="prev" onclick="changeImage(-1)">&#10094;</span>
-        <span class="next" onclick="changeImage(1)">&#10095;</span>
+        <span class="prev" aria-label="Previous image" onclick="changeImage(-1)">&#10094;</span>
+        <span class="next" aria-label="Next image" onclick="changeImage(1)">&#10095;</span>
     </div>
 
     <!-- JavaScript -->
@@ -244,7 +243,7 @@
         function openModal(index) {
             currentImageIndex = index;
             document.getElementById('imageModal').style.display = 'flex';
-            document.getElementById('modalImage').src = images[currentImageIndex];
+            document.getElementById('modalImage').src = images[currentImageIndex]; // Set the clicked image
         }
 
         // Function to close the modal
@@ -255,24 +254,20 @@
         // Function to change images (Next/Previous)
         function changeImage(direction) {
             currentImageIndex += direction;
+
+            // If current index is out of bounds, wrap around
             if (currentImageIndex < 0) currentImageIndex = images.length - 1;
             if (currentImageIndex >= images.length) currentImageIndex = 0;
+
+            // Update the image source in the modal
             document.getElementById('modalImage').src = images[currentImageIndex];
         }
 
         // Disable right-click on images
         document.querySelectorAll('.gallery img').forEach(img => {
             img.addEventListener('contextmenu', function(event) {
-                event.preventDefault();
+                event.preventDefault(); // Prevents right-clicking on images
             });
-        });
-
-        // Prevent Print Screen key
-        document.addEventListener('keydown', function (e) {
-            if (e.keyCode === 44) {
-                e.preventDefault();
-                alert("Screenshot has been blocked!");
-            }
         });
     </script>
 
