--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -250,18 +250,17 @@
         let currentImageIndex = 0;
         const images = [
             { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 2" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 4" },
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 5" },
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 6" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 7" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 8" },
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 9" },
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 10" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 11" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 12" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 13" }
+            { src: "./gallery/bb.jpg", caption: "Caption for Image 2" },
+            { src: "./gallery/cc.jpg", caption: "Caption for Image 3" },
+            { src: "./gallery/dd.jpg", caption: "Caption for Image 4" },
+            { src: "./gallery/ee.jpg", caption: "Caption for Image 5" },
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 6" },
+            { src: "./gallery/gg.jpg", caption: "Caption for Image 7" },
+            { src: "./gallery/hh.jpg", caption: "Caption for Image 8" },
+            { src: "./gallery/ii.jpg", caption: "Caption for Image 9" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 10" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 11" }
+            
         ];
 
         // Function to open the modal with full-size image and caption
