--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -35,7 +35,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 10px;
+            gap: 2vw; /* Using vw for better responsiveness */
         }
 
         .image-item {
@@ -43,25 +43,27 @@
             cursor: pointer;
             border-radius: 8px;
             overflow: hidden;
-            width: 200px;
-            height: 200px;
+            width: 20vw; /* Width based on the viewport width */
+            height: 20vw; /* Equal height to width */
+            max-width: 200px; /* Maximum size to avoid images growing too large */
+            max-height: 200px; /* Maximum height */
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow to create a card effect */
         }
 
         .image-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Ensures image covers the container while maintaining its aspect ratio */
+            object-fit: cover; /* Ensures that the image covers the entire container without distortion */
             border-radius: 8px;
+            transition: transform 0.3s ease;
         }
 
         /* Image scaling on hover */
         .image-item img:hover {
-            transform: scale(1.05);
-            transition: transform 0.3s ease;
+            transform: scale(1.1);
         }
 
         /* Position caption at the bottom */
@@ -89,12 +91,6 @@
             justify-content: center;
             align-items: center;
             z-index: 100;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .modal.show {
-            opacity: 1;
         }
 
         .modal-content {
@@ -105,9 +101,7 @@
 
         .modal-content img {
             width: 100%;
-            height: auto; /* Keep aspect ratio */
-            max-height: 80vh; /* Ensures image does not exceed the viewport height */
-            object-fit: contain; /* Ensure the image maintains its aspect ratio */
+            height: auto;
             border-radius: 8px;
         }
 
@@ -141,15 +135,19 @@
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .image-item {
-                width: 150px;
-                height: 150px;
+                width: 30vw; /* Adjusted for tablet or medium-sized screens */
+                height: 30vw; /* Same height */
+                max-width: 150px;
+                max-height: 150px;
             }
         }
 
         @media (max-width: 480px) {
             .image-item {
-                width: 120px;
-                height: 120px;
+                width: 40vw; /* Adjusted for smaller mobile screens */
+                height: 40vw; /* Same height */
+                max-width: 120px;
+                max-height: 120px;
             }
         }
 
@@ -186,25 +184,22 @@
             </div>
         </div>
     </nav>
-
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
-
-    <!-- Image Gallery -->
     <div class="image-gallery">
         <div class="image-item" onclick="openModal(0)">
-            <img src="./gallery/aa.jpg" alt="Image 1" onerror="this.src='./fallback.jpg';">
+            <img src="./gallery/aa.jpg" alt="Image 1">
             <div class="caption">Caption for Image 1</div>
         </div>
         <div class="image-item" onclick="openModal(1)">
-            <img src="./gallery/kk.jpg" alt="Image 2" onerror="this.src='./fallback.jpg';">
+            <img src="./gallery/ff.jpg" alt="Image 2">
             <div class="caption">Caption for Image 2</div>
         </div>
         <div class="image-item" onclick="openModal(2)">
-            <img src="./gallery/jj.jpg" alt="Image 3" onerror="this.src='./fallback.jpg';">
+            <img src="./gallery/kk.jpg" alt="Image 3">
             <div class="caption">Caption for Image 3</div>
         </div>
         <div class="image-item" onclick="openModal(3)">
-            <img src="./gallery/ii.jpg" alt="Image 4" onerror="this.src='./fallback.jpg';">
+            <img src="./gallery/jj.jpg" alt="Image 4">
             <div class="caption">Caption for Image 4</div>
         </div>
     </div>
@@ -224,12 +219,11 @@
         let currentImageIndex = 0;
         const images = [
             { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 2" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
-            { src: "./gallery/ii.jpg", caption: "Caption for Image 4" }
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 3" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 4" }
         ];
 
-        // Function to open the modal with full-size image and caption
         function openModal(index) {
             currentImageIndex = index;
             const { src, caption } = images[currentImageIndex];
@@ -239,39 +233,44 @@
             modal.classList.add('show');
         }
 
-        // Function to change the image (Previous / Next)
         function changeImage(direction) {
             currentImageIndex += direction;
-
-            // Ensure the index is within bounds
             if (currentImageIndex < 0) {
                 currentImageIndex = images.length - 1;
             } else if (currentImageIndex >= images.length) {
                 currentImageIndex = 0;
             }
-
             const { src, caption } = images[currentImageIndex];
             updateModalContent(src, caption);
         }
 
-        // Function to update the modal content
         function updateModalContent(imageSrc, captionText) {
             document.getElementById("fullImage").src = imageSrc;
             document.getElementById("modalCaption").innerText = captionText;
         }
 
-        // Function to close the modal
         function closeModal() {
             const modal = document.getElementById("imageModal");
             modal.style.display = "none";
             modal.classList.remove('show');
         }
 
-        // Close the modal when clicking outside the modal content
         document.getElementById("imageModal").addEventListener("click", function (e) {
             if (e.target === document.getElementById("imageModal")) {
                 closeModal();
             }
+        });
+
+        // Prevent right-click to stop downloading images
+        document.querySelectorAll('img').forEach(image => {
+            image.addEventListener('contextmenu', (event) => {
+                event.preventDefault();
+                alert('Right-click is disabled. Image download is not allowed.');
+            });
+
+            image.addEventListener('dragstart', (event) => {
+                event.preventDefault();
+            });
         });
     </script>
 
