--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -71,11 +71,12 @@
             position: absolute;
             bottom: 0;
             width: 100%;
+            height: 100%;
             text-align: center;
             color: white;
             background-color: rgba(0, 0, 0, 0.7);
-            padding: 5px;
-            border-radius: 5px;
+            padding: 1px;
+            border-radius: 2px;
             margin: 0;
         }
 
