--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -40,16 +40,16 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 0.1vw;
+            gap: 10px; /* Gap between images */
         }
 
         .image-item {
             position: relative;
             cursor: pointer;
-            width: 25vw; /* Equal width */
-            height: 25vw; /* Equal height (to make square images) */
-            max-width: 250px; /* Max size */
-            max-height: 250px; /* Max size */
+            width: 22vw;  /* Adjust this value to ensure images are not too large or small */
+            height: 22vw; /* Equal width and height for square images */
+            max-width: 250px;
+            max-height: 250px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -59,7 +59,7 @@
         .image-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Ensures the image covers the entire container without stretching */
+            object-fit: cover;  /* Ensures the image fits without stretching */
             border-radius: 4px;
         }
 
@@ -121,21 +121,11 @@
             right: 20px;
         }
 
-        .modal-caption {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            color: white;
-            font-size: 18px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
-
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .image-item {
-                width: 40vw; /* Adjusted width for medium screens */
-                height: 40vw; /* Same height */
+                width: 40vw;  /* Adjust width for medium screens */
+                height: 40vw; /* Maintain aspect ratio */
                 max-width: 200px;
                 max-height: 200px;
             }
@@ -143,8 +133,8 @@
 
         @media (max-width: 480px) {
             .image-item {
-                width: 50vw; /* Adjusted width for smaller screens */
-                height: 50vw; /* Same height */
+                width: 50vw;  /* Adjust width for smaller screens */
+                height: 50vw; /* Maintain aspect ratio */
                 max-width: 150px;
                 max-height: 150px;
             }
@@ -186,10 +176,10 @@
 
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
 
-    <!-- First Image Gallery -->
+    <!-- Image Gallery -->
     <div class="image-gallery-container">
-        <h2>Gallery 1</h2>
         <div class="image-gallery">
+            <!-- Image items with click event to open modal -->
             <div class="image-item" onclick="openModal(0)">
                 <img src="./gallery/aa.jpg" alt="Image 1">
             </div>
@@ -202,13 +192,6 @@
             <div class="image-item" onclick="openModal(3)">
                 <img src="./gallery/kk.jpg" alt="Image 4">
             </div>
-        </div>
-    </div>
-
-    <!-- Second Image Gallery -->
-    <div class="image-gallery-container">
-        <h2>Gallery 2</h2>
-        <div class="image-gallery">
             <div class="image-item" onclick="openModal(4)">
                 <img src="./gallery/aa.jpg" alt="Image 5">
             </div>
@@ -221,6 +204,12 @@
             <div class="image-item" onclick="openModal(7)">
                 <img src="./gallery/dd.jpg" alt="Image 8">
             </div>
+            <div class="image-item" onclick="openModal(8)">
+                <img src="./gallery/ee.jpg" alt="Image 9">
+            </div>
+            <div class="image-item" onclick="openModal(9)">
+                <img src="./gallery/ff.jpg" alt="Image 10">
+            </div>
         </div>
     </div>
 
@@ -231,7 +220,6 @@
         <span class="modal-nav modal-next" onclick="changeImage(1)">&#10095;</span>
         <div class="modal-content">
             <img id="fullImage" src="" alt="Full Image">
-            <div id="modalCaption" class="modal-caption"></div>
         </div>
     </div>
 
@@ -246,14 +234,16 @@
             { src: "./gallery/bb.jpg", caption: "Caption for Image 6" },
             { src: "./gallery/cc.jpg", caption: "Caption for Image 7" },
             { src: "./gallery/dd.jpg", caption: "Caption for Image 8" },
+            { src: "./gallery/ee.jpg", caption: "Caption for Image 9" },
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 10" }
         ];
 
         function openModal(index) {
             currentImageIndex = index;
-            const { src, caption } = images[currentImageIndex];
-            updateModalContent(src, caption);
+            const { src } = images[currentImageIndex];
+            updateModalContent(src);
             const modal = document.getElementById("imageModal");
-            modal.style.display = "flex";
+            modal.style.display = "flex"; // Ensure modal is shown
             modal.classList.add('show');
         }
 
@@ -264,13 +254,12 @@
             } else if (currentImageIndex >= images.length) {
                 currentImageIndex = 0;
             }
-            const { src, caption } = images[currentImageIndex];
-            updateModalContent(src, caption);
+            const { src } = images[currentImageIndex];
+            updateModalContent(src);
         }
 
-        function updateModalContent(imageSrc, caption) {
+        function updateModalContent(imageSrc) {
             document.getElementById("fullImage").src = imageSrc;
-            document.getElementById("modalCaption").textContent = caption;
         }
 
         function closeModal() {
@@ -286,6 +275,6 @@
         });
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
