--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -40,16 +40,16 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 10px; /* Gap between images */
+            gap: 0.1vw;
         }
 
         .image-item {
             position: relative;
             cursor: pointer;
-            width: 22vw;  /* Adjust this value to ensure images are not too large or small */
-            height: 22vw; /* Equal width and height for square images */
-            max-width: 250px;
-            max-height: 250px;
+            width: 25vw; /* Equal width */
+            height: 25vw; /* Equal height (to make square images) */
+            max-width: 250px; /* Max size */
+            max-height: 250px; /* Max size */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -59,8 +59,31 @@
         .image-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover;  /* Ensures the image fits without stretching */
+            object-fit: cover; /* Ensures the image covers the entire container without stretching */
             border-radius: 4px;
+        }
+
+        /* Watermark */
+        .watermark {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 24px;
+            font-weight: bold;
+            pointer-events: none; /* Prevent interaction with the watermark */
+        }
+
+        /* Overlay */
+        .image-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(255, 255, 255, 0.7); /* Transparent overlay */
+            pointer-events: none; /* Make overlay non-interactive */
         }
 
         /* Modal (Full-Screen View) */
@@ -121,25 +144,6 @@
             right: 20px;
         }
 
-        /* Mobile Responsiveness */
-        @media (max-width: 768px) {
-            .image-item {
-                width: 40vw;  /* Adjust width for medium screens */
-                height: 40vw; /* Maintain aspect ratio */
-                max-width: 200px;
-                max-height: 200px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .image-item {
-                width: 50vw;  /* Adjust width for smaller screens */
-                height: 50vw; /* Maintain aspect ratio */
-                max-width: 150px;
-                max-height: 150px;
-            }
-        }
-
         /* Prevent image drag */
         img {
             user-drag: none;
@@ -148,67 +152,29 @@
 </head>
 <body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
 
-    <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
-        <div class="container-fluid">
-            <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
 
-    <!-- Image Gallery -->
     <div class="image-gallery-container">
         <div class="image-gallery">
-            <!-- Image items with click event to open modal -->
-            <div class="image-item" onclick="openModal(0)">
+            <div class="image-item">
                 <img src="./gallery/aa.jpg" alt="Image 1">
+                <div class="image-overlay"></div>
+                <div class="watermark">Your Watermark</div>
             </div>
-            <div class="image-item" onclick="openModal(1)">
+            <div class="image-item">
                 <img src="./gallery/ff.jpg" alt="Image 2">
+                <div class="image-overlay"></div>
+                <div class="watermark">Your Watermark</div>
             </div>
-            <div class="image-item" onclick="openModal(2)">
+            <div class="image-item">
                 <img src="./gallery/jj.jpg" alt="Image 3">
+                <div class="image-overlay"></div>
+                <div class="watermark">Your Watermark</div>
             </div>
-            <div class="image-item" onclick="openModal(3)">
+            <div class="image-item">
                 <img src="./gallery/kk.jpg" alt="Image 4">
-            </div>
-            <div class="image-item" onclick="openModal(4)">
-                <img src="./gallery/aa.jpg" alt="Image 5">
-            </div>
-            <div class="image-item" onclick="openModal(5)">
-                <img src="./gallery/bb.jpg" alt="Image 6">
-            </div>
-            <div class="image-item" onclick="openModal(6)">
-                <img src="./gallery/cc.jpg" alt="Image 7">
-            </div>
-            <div class="image-item" onclick="openModal(7)">
-                <img src="./gallery/dd.jpg" alt="Image 8">
-            </div>
-            <div class="image-item" onclick="openModal(8)">
-                <img src="./gallery/ee.jpg" alt="Image 9">
-            </div>
-            <div class="image-item" onclick="openModal(9)">
-                <img src="./gallery/ff.jpg" alt="Image 10">
+                <div class="image-overlay"></div>
+                <div class="watermark">Your Watermark</div>
             </div>
         </div>
     </div>
@@ -224,18 +190,31 @@
     </div>
 
     <script>
+        // Disable right-click and prevent drag
+        document.querySelectorAll('img').forEach(image => {
+            image.addEventListener('contextmenu', (event) => {
+                event.preventDefault();
+                alert('Right-click is disabled. Image download is not allowed.');
+            });
+
+            image.addEventListener('dragstart', (event) => {
+                event.preventDefault();
+            });
+        });
+
+        // Block screenshot key (Print Screen)
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'PrintScreen') {
+                alert("Screenshots are not allowed on this site.");
+            }
+        });
+
         let currentImageIndex = 0;
         const images = [
             { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
             { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
             { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 4" },
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 5" },
-            { src: "./gallery/bb.jpg", caption: "Caption for Image 6" },
-            { src: "./gallery/cc.jpg", caption: "Caption for Image 7" },
-            { src: "./gallery/dd.jpg", caption: "Caption for Image 8" },
-            { src: "./gallery/ee.jpg", caption: "Caption for Image 9" },
-            { src: "./gallery/ff.jpg", caption: "Caption for Image 10" }
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 4" }
         ];
 
         function openModal(index) {
@@ -243,8 +222,7 @@
             const { src } = images[currentImageIndex];
             updateModalContent(src);
             const modal = document.getElementById("imageModal");
-            modal.style.display = "flex"; // Ensure modal is shown
-            modal.classList.add('show');
+            modal.style.display = "flex";
         }
 
         function changeImage(direction) {
@@ -265,7 +243,6 @@
         function closeModal() {
             const modal = document.getElementById("imageModal");
             modal.style.display = "none";
-            modal.classList.remove('show');
         }
 
         document.getElementById("imageModal").addEventListener("click", function (e) {
