--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -63,6 +63,24 @@
             border-radius: 4px;
         }
 
+        /* Caption */
+        .image-item figcaption {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            text-align: center;
+            padding: 5px;
+            font-size: 0.8rem;
+            display: none; /* Hide captions initially */
+        }
+
+        .image-item:hover figcaption {
+            display: block; /* Show caption on hover */
+        }
+
         /* Modal (Full-Screen View) */
         .modal {
             display: none;
@@ -84,6 +102,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            text-align: center;
         }
 
         .modal-content img {
@@ -92,6 +111,12 @@
             width: auto;
             height: auto;
             border-radius: 4px;
+        }
+
+        .modal-caption {
+            color: white;
+            font-size: 1.2rem;
+            margin-top: 10px;
         }
 
         .modal-close {
@@ -177,65 +202,36 @@
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
 
     <div class="image-gallery-container">
-         <div class="caption">Image 1</div>
+        
         <div class="image-gallery">
             <!-- First set of images -->
-           
-            <div class="image-item" onclick="openModal(0)">
+            <figure class="image-item" onclick="openModal(0)">
                 <img src="./gallery/aa.jpg" alt="Image 1">
-            </div>
-            <div class="image-item" onclick="openModal(1)">
+                <figcaption>Caption for Image 1</figcaption>
+            </figure>
+            <figure class="image-item" onclick="openModal(1)">
                 <img src="./gallery/ff.jpg" alt="Image 2">
-            </div>
-            <div class="image-item" onclick="openModal(2)">
+                <figcaption>Caption for Image 2</figcaption>
+            </figure>
+            <figure class="image-item" onclick="openModal(2)">
                 <img src="./gallery/jj.jpg" alt="Image 3">
-            </div>
-            <div class="image-item" onclick="openModal(3)">
+                <figcaption>Caption for Image 3</figcaption>
+            </figure>
+            <figure class="image-item" onclick="openModal(3)">
                 <img src="./gallery/kk.jpg" alt="Image 4">
-            </div>
+                <figcaption>Caption for Image 4</figcaption>
+            </figure>
         </div>
     </div>
 
     <div class="image-gallery-container">
         <div class="image-gallery">
             <!-- Second set of images -->
-            <div class="image-item" onclick="openModal(4)">
+            <figure class="image-item" onclick="openModal(4)">
                 <img src="./gallery/aa.jpg" alt="Image 5">
-                 <div class="caption">Image 1</div>
-            </div>
-            <div class="image-item" onclick="openModal(5)">
-                <img src="./gallery/bb.jpg" alt="Image 6">
-            </div>
-            <div class="image-item" onclick="openModal(6)">
-                <img src="./gallery/cc.jpg" alt="Image 7">
-            </div>
-            <div class="image-item" onclick="openModal(7)">
-                <img src="./gallery/dd.jpg" alt="Image 8">
-            </div>
-            <div class="image-item" onclick="openModal(8)">
-                <img src="./gallery/ee.jpg" alt="Image 9">
-            </div>
-            <div class="image-item" onclick="openModal(9)">
-                <img src="./gallery/ff.jpg" alt="Image 10">
-            </div>
-            <div class="image-item" onclick="openModal(10)">
-                <img src="./gallery/gg.jpg" alt="Image 11">
-            </div>
-            <div class="image-item" onclick="openModal(11)">
-                <img src="./gallery/hh.jpg" alt="Image 12">
-            </div>
-            <div class="image-item" onclick="openModal(12)">
-                <img src="./gallery/ii.jpg" alt="Image 13">
-            </div>
-            <div class="image-item" onclick="openModal(13)">
-                <img src="./gallery/jj.jpg" alt="Image 14">
-            </div>
-            <div class="image-item" onclick="openModal(14)">
-                <img src="./gallery/zz.jpg" alt="Image 15">
-            </div>
-            <div class="image-item" onclick="openModal(15)">
-                <img src="./gallery/xx.jpg" alt="Image 16">
-            </div>
+                <figcaption>Caption for Image 5</figcaption>
+            </figure>
+            <!-- Add more figure elements as needed for other images -->
         </div>
     </div>
 
@@ -246,6 +242,7 @@
         <span class="modal-nav modal-next" onclick="changeImage(1)">&#10095;</span>
         <div class="modal-content">
             <img id="fullImage" src="" alt="Full Image">
+            <div class="modal-caption" id="modalCaption"></div>
         </div>
     </div>
 
@@ -272,8 +269,8 @@
 
         function openModal(index) {
             currentImageIndex = index;
-            const { src } = images[currentImageIndex];
-            updateModalContent(src);
+            const { src, caption } = images[currentImageIndex];
+            updateModalContent(src, caption);
             const modal = document.getElementById("imageModal");
             modal.style.display = "flex";
             modal.classList.add('show');
@@ -286,12 +283,13 @@
             } else if (currentImageIndex >= images.length) {
                 currentImageIndex = 0;
             }
-            const { src } = images[currentImageIndex];
-            updateModalContent(src);
+            const { src, caption } = images[currentImageIndex];
+            updateModalContent(src, caption);
         }
 
-        function updateModalContent(imageSrc) {
+        function updateModalContent(imageSrc, caption) {
             document.getElementById("fullImage").src = imageSrc;
+            document.getElementById("modalCaption").textContent = caption;
         }
 
         function closeModal() {
@@ -304,18 +302,6 @@
             if (e.target === document.getElementById("imageModal")) {
                 closeModal();
             }
-        });
-
-        // Prevent right-click to stop downloading images
-        document.querySelectorAll('img').forEach(image => {
-            image.addEventListener('contextmenu', (event) => {
-                event.preventDefault();
-                alert('Right-click is disabled. Image download is not allowed.');
-            });
-
-            image.addEventListener('dragstart', (event) => {
-                event.preventDefault();
-            });
         });
     </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
